--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <li>Dogs</li>
         </ul>
         <img
-            src="https://www.kalmbachfeeds.com/cdn/shop/articles/two-white-ducks-in-grass.jpg?v=1706873608/platformerJS.html">
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQITnqymFsHeTAvrFkDhPzqiY-aecYkOYrUjyx51125EVgNcEc:https://i.redd.it/wd4m3jz8elc91.jpg&s">
     </div>
 </body>
 
