--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,7 @@
                 <h1>Portfolio</h1>
                 <ul id="portfolio">
                     <li><a href="platformerJS.html">Platformer: A cannon-dodging, collectible-grabbing adventure game for Halleb0t</a></li>
+                    <li><a href="clicker.html">Clicker: Click cookie monster, get points</a></li>
                      </ul>
             </div>
         </main>
