--- a/index.html
+++ b/index.html
@@ -1,116 +1,47 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-    <style>
-        /* Navbar styling */
-        nav {
-            background: #333;
-            /* Background color for the navbar */
-            color: white;
-            /* Text color */
-            padding: 15px;
-            /* Padding inside the navbar */
-            display: flex;
-            /* Flexbox layout to align items */
-            justify-content: space-between;
-            /* Space between title and links */
-            align-items: center;
-            /* Vertically center the items */
-            margin-bottom: 20px;
-            /* Space below the navbar */
-        }
+  <title>Logan Pritchett's Website</title>
+  <link rel="stylesheet" href="style.css" />
 
-        h1 {
-            margin: 0;
-            /* Remove default margin */
-            font-size: 24px;
-            /* Font size for the website title */
-        }
-
-        #nav-ul {
-            list-style-type: none;
-            /* Remove default list bullets */
-            padding: 0;
-            /* Remove default padding */
-            margin: 0;
-            /* Remove default margin */
-            display: flex;
-            /* Flexbox layout for horizontal list items */
-        }
-
-        .nav-li {
-            margin: 0 15px;
-            /* Space between each navigation item */
-        }
-
-        a {
-            color: white;
-            /* Link text color */
-            text-decoration: none;
-            /* Remove underline from links */
-        }
-
-        /* Add a hover effect for the navigation links */
-        a:hover {
-            color: #ffeb3b;
-            /* Change color on hover */
-        }
-
-        body {
-            background: blue;
-        }
-
-        .star {
-            background: rgb(58, 58, 58);
-            margin-left: 25%;
-            margin-right: 25%;
-            color: rgb(255, 253, 253);
-        }
-
-        img {
-            width: 100%;
-        }
-
-        .world {
-            color: rgb(255, 255, 255);
-            background: rgb(50, 50, 50);
-        }
-
-        body {
-            margin-left: 0%;
-            margin-right: 0%;
-            margin-top: 0%;
-        }
-    </style>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>space</title>
 </head>
 
 <body>
+  <div id="all cotent">
     <nav>
-        <h1>Logan Pritchett</h1>
-        <ul id="nav-ul">
-            <li class="nav-li"><a href="index.html">Home</a></li>
-            <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>
-            <a
-                href="https://legendary-goldfish-97qp9wvvjjv5fpp6p-5502.app.github.dev/platformerJS.html">PlatformerGame!</a>
-            <a href="clicker.html">ClickerGame!</a>
-        </ul>
+      <h1>Logan Pritchett Amazing Website</h1>
+      <ul id="nav-ul">
+        <li class="nav-li">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-li">
+          <a href="portfolio.html">Portfolio</a>
+        </li>
+      </ul>
     </nav>
-    <div class="world">
-        Home
-    </div>
-    <div class="star">
-        <p>My Interest</p>
-        <ul>
-            <li>Movie</li>
-            <li>Art</li>
-            <li>Dogs</li>
-        </ul>
-        <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQITnqymFsHeTAvrFkDhPzqiY-aecYkOYrUjyx51125EVgNcEc:https://i.redd.it/wd4m3jz8elc91.jpg&s">
-    </div>
+    <main>
+      <!-- Sidebar section -->
+      <div class="sidebar">
+        <img class="sidebar-img"
+          src="https://www.orchardroadanimalhospital.com/sites/default/files/styles/large/public/labrador-retriever-dog-breed-info.jpg?itok=94ahwDa9">
+      </div>
+
+      <!-- Content section -->
+      <div class="content">
+        <h2>Logan Pritchett</h2>
+        <p>Student at Lakeshore Highschool</p>
+        <div id="interest">
+          <h3>Interest</h3>
+          <ul>
+            <li>Game/website Design</li>
+            <li>Sketching</li>
+            <li>Painting</li>
+          </ul>
+        </div>
+      </div>
+    </main>
+  </div>
 </body>
+
 
 </html>
