complete bouncing box project

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
                     <li><a href="projects/platformer/">Platformer: A cannon-dodging, collectible-grabbing adventure game
                             for Halleb0t</a></li>
                     <li><a href="clicker.html">Clicker: Click cookie monster, get points</a></li>
+                    <li><a href="projects/bouncing-box/">Bouncing-bo: Box bounces</a></li>
                 </ul>
             </div>
         </main>
