completed circularity project

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
                             for Halleb0t</a></li>
                     <li><a href="clicker.html">Clicker: Click cookie monster, get points</a></li>
                     <li><a href="projects/bouncing-box/">Bouncing-bo: Box bounces</a></li>
+                    <li><a href="projects/circularity/">Circularity: </a></li>
                 </ul>
             </div>
         </main>
