--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,8 @@
                     <li><a href="clicker.html">Clicker: Click cookie monster, get points</a></li>
                     <li><a href="projects/bouncing-box/">Bouncing-bo: Box bounces</a></li>
                     <li><a href="projects/circularity/">Circularity: </a></li>
+                    <li><a href="circles.html">1000 bouncing squares</a></li>
+                    <li><a href="newCircles.html">bouncing circles</a></li>
                 </ul>
             </div>
         </main>
