--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -98,7 +98,7 @@
 				score = score + 1
 				positionX = 0
 				changeBoxText(score)
-				speed = 3 * points +10
+				speed = 3 * score + 10
 			};
 
 
